cicd/deployment-config.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: dotnet-api
spec:
  replicas: 1
  selector:
    deploymentconfig: dotnet-api
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: dotnet-api
        deploymentconfig: dotnet-api
        technology: dotnet
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/ocp-demo/dotnet-api:1.0
        imagePullPolicy: Always
        name: dotnet-api
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
