cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-api
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    deploymentconfig: dotnet-api
