cicd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-api
spec:
  port:
    targetPort: 5000
  to:
    kind: Service
    name: dotnet-api
    weight: 100
